# pytest-sample

./: .gitignore  Dockerfile  README.md  environment.yml  main.py  popularity_score.py  pyproject.toml  requirements.txt  test_main.py  tests.py  tox.ini
notebook/: eda.ipynb
src/myapp/: dummy_class.py  samples.ipynb
tests/: test_dummy_class.py  test_helloworld.py  test_main.py  test_popularity_score.py
